[gd_scene load_steps=22 format=3 uid="uid://cdegwp77vugfb"]

[ext_resource type="Script" path="res://Scripts/boss_jumper.gd" id="1_ohpso"]
[ext_resource type="Texture2D" uid="uid://d3ji2cc4dss50" path="res://Art/Sprites/max run.png" id="2_jjgfs"]
[ext_resource type="Script" path="res://Scenes/Enemies/boss_jumper_sprite.gd" id="3_kfmyu"]
[ext_resource type="Script" path="res://Scripts/enemy_health.gd" id="3_u4xs6"]
[ext_resource type="Texture2D" uid="uid://5tfn2k4jut0o" path="res://Art/Sprites/boss icon.png" id="4_1wodp"]
[ext_resource type="PackedScene" uid="uid://bb6l6e5xtb17k" path="res://Scenes/Particles/shadow.tscn" id="4_bl1kq"]
[ext_resource type="PackedScene" uid="uid://84xxip1wf4vx" path="res://Scenes/UI/minimap_icon.tscn" id="5_0bsj1"]
[ext_resource type="PackedScene" uid="uid://pkl1jd6tt0bd" path="res://Scenes/UI/arrow.tscn" id="5_o7x11"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6m04t"]
atlas = ExtResource("2_jjgfs")
region = Rect2(0, 0, 80, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa222"]
atlas = ExtResource("2_jjgfs")
region = Rect2(80, 0, 80, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfytq"]
atlas = ExtResource("2_jjgfs")
region = Rect2(160, 0, 80, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_1n5n1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m04t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa222")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m04t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfytq")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hr8qo"]
radius = 9.01388

[sub_resource type="RectangleShape2D" id="RectangleShape2D_85mo7"]
size = Vector2(43, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_qkyuv"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hhmv6"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m001l"]
size = Vector2(43, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_507ny"]
size = Vector2(15, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1002j"]
size = Vector2(22, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2hn4"]
size = Vector2(22, 13)

[sub_resource type="GDScript" id="GDScript_yvhgh"]
script/source = "extends Node2D

@export var sprite: Texture2D
@export var follow: bool
var icon: Node2D


func _ready():
	call_deferred(\"add_to_minimap\")


func add_to_minimap():
	var minimap = Globals.ui.get_node(\"Minimap\")
	var follow_obj
	if follow:
		follow_obj = get_parent()
	else:
		follow_obj = null
	icon = minimap.add_to_map(sprite, global_position, follow_obj)


func _exit_tree():
	icon.queue_free()
"

[node name="Boss" type="CharacterBody2D" groups=["enemy"]]
use_parent_material = true
collision_layer = 0
collision_mask = 257
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_ohpso")
health_multiplier = 75.0
damage = 15.0
money_amount = 25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_1n5n1")
autoplay = "default"
frame = 2
frame_progress = 0.00870445
offset = Vector2(0, -20)
script = ExtResource("3_kfmyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -22.5)
shape = SubResource("CircleShape2D_hr8qo")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy"]]
process_mode = 4
y_sort_enabled = true
position = Vector2(3, -15)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2.5, -3.5)
shape = SubResource("RectangleShape2D_85mo7")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-24, 6)
shape = SubResource("CircleShape2D_qkyuv")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(20, 5)
shape = SubResource("CircleShape2D_hhmv6")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("sprite") groups=["enemy"]]
y_sort_enabled = true
position = Vector2(0, -20)
collision_layer = 8
collision_mask = 2
script = ExtResource("3_u4xs6")
health = 3000
rotate_on_hit = false
explosion_scale = 2.5
sprite = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1.5, 1.5)
shape = SubResource("RectangleShape2D_m001l")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(7.5, -14.5)
shape = SubResource("RectangleShape2D_507ny")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-20, 14)
shape = SubResource("RectangleShape2D_1002j")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(23, 13.5)
shape = SubResource("RectangleShape2D_r2hn4")

[node name="Shadow" parent="." instance=ExtResource("4_bl1kq")]
scale = Vector2(1, 0.2)
radius = 40
color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="MinimapIcon" parent="." instance=ExtResource("5_0bsj1")]
script = SubResource("GDScript_yvhgh")
sprite = ExtResource("4_1wodp")
follow = true

[node name="Arrow" parent="." instance=ExtResource("5_o7x11")]
visible = false

[node name="JumpCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="reached_ground" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_reached_ground"]
[connection signal="timeout" from="JumpCooldown" to="." method="_on_jump_cooldown_timeout"]
